# auth

./: Cargo.toml  Dockerfile  README.md  run.sh
.devcontainer/: docker-compose.yml
.devcontainer/config/: .db.env  .env
auth/: Dockerfile
auth-lib/: Cargo.toml
auth-lib/src/access/: mod.rs
auth-lib/src/access/extractor/: extract.rs
auth-lib/src/db/: mongo.rs
auth-lib/src/db/parser/: user.rs
auth-service/src/: main.rs
auth/auth-lib/: Cargo.toml
auth/auth-lib/src/: lib.rs
auth/auth-lib/src/access/: mod.rs  tokens.rs
auth/auth-lib/src/access/extractor/: extract.rs
auth/auth-lib/src/access/tokenize/: parser.rs
auth/auth-lib/src/api/: authorize.rs
auth/auth-lib/src/db/: mod.rs  mongo.rs
auth/auth-lib/src/db/parser/: user.rs
auth/auth-service/: Cargo.toml
auth/auth-service/src/: main.rs
