[package]
name = "auth-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pkcs1 = "0.7.5"
dotenv = "0.15.0"
actix-web = "4.3.1"
tokio = "1.28.0"
envy = "0.4"
serde = {version = "1.0", features = ["derive"]}
jsonwebtoken = "8.1.1"
chrono = "0.4.22"
mongodb = {version = "2.5.0", default-features = false, features = ["sync"]}
bson = {version = "2.6.1", features = ["chrono-0_4", "uuid-1", "serde_with"]}
env_logger = "0.10.0"
log = "0.4.17"
uuid = "1.3.2"
serde_with = "2.3.3"
